--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <article class="box">
         <h1>Anjum Rashid</h1>
         <div>
-          <a href="mailto:your.email@example.com">ping@anjumrashid.me</a>
+          <a href="mailto:ping@anjumrashid.me">ping@anjumrashid.me</a>
         </div>
 
         <section class="box">
@@ -26,11 +26,13 @@
             Social media
           </h2>
           <ul>
-            <li><a href="https://github.com/<handle>">@bijoy26</a></li>
+            <li><a href="https://github.com/bijoy26">@bijoy26</a></li>
             <li>
-              <a href="https://linkedin.com/in/<handle>">@bijoy26</a>
+              <a href="https://linkedin.com/in/bijoy26">@bijoy26</a>
             </li>
-            <li><a href="https://twitter.com/<handle>">@anjum_bijoy26</a></li>
+            <li>
+              <a href="https://twitter.com/anjum_bijoy26">@anjum_bijoy26</a>
+            </li>
           </ul>
         </section>
 
@@ -43,7 +45,7 @@
             <h3>Major</h3>
             <ul>
               <li>GPA: 3.45 (Till 4.1)</li>
-              <li>BSc Final Years</li>
+              <li>BSc Final Year</li>
             </ul>
           </div>
         </section>
@@ -54,12 +56,14 @@
             Skills
           </h2>
           <ul>
-            <li>CSS</li>
-            <li>HTML</li>
-            <li>JavaScript</li>
+            <li>Azure</li>
             <li>Penetration Testing</li>
+            <li>Truffle Suite</li>
+            <li>System Administration</li>
+            <li>Information Security</li>
+            <li>React</li>
+            <li>Bash</li>
             <li>Git</li>
-            <li>Visual Studio Code</li>
           </ul>
         </section>
       </article>
@@ -71,20 +75,36 @@
           </h2>
           <h3>Microsoft Learn Student Ambassador</h3>
           <ul>
-            <li>Some skill</li>
-            <li>Another skill</li>
+            <li>Gold Milestone Achievement</li>
+            <li>Ambasasdors Summit Scavenger Hunt 2021 Winner</li>
+         <h3>Voice of Code</h3>
+            <ul>
+              <li>Platform Administration</li>
+              <li>"Hot Reload 2021" Initiator</li>
           </ul>
+        <h3>JU Computer Club</h3>
+          <ul>
+            <li>Vice President</li>
+            <li>Platform Administrator</li>
+        </ul>
+
         </section>
         <section class="box">
           <h2>
             <i class="fa fa-building" aria-hidden="true"></i>
-            Internships
+            Apprenticeship
           </h2>
 
-          <h3>Company name</h3>
+          <h3>Student Code-In</h3>
           <ul>
-            <li>Accomplishment</li>
-            <li>Another accomplishment</li>
+            <li>Top Performer 2020</li>
+            <li>Open Source Contributor</li>
+          </ul>
+
+          <h3>XortonSoft</h3>
+          <ul>
+            <li>Wordpress Site Developer</li>
+            <li>Theme Management</li>
           </ul>
         </section>
         <section class="box">
@@ -93,12 +113,25 @@
             Projects
           </h2>
 
-          <h3>Great hackathon</h3>
-          <div>This was a great hack!</div>
+          <h3>Crypto Beacon</h3>
+          <div>Decentralized Inclusive Community Media</div>
           <ul>
-            <li>Cool technology used</li>
-            <li>Prize won</li>
+            <li>Solidity, Truffle, Web3.js</li>
+            <li>Polygon</li>
           </ul>
+
+          <h3>Say My Name</h3>
+          <div>Random Name Generator</div>
+          <ul>
+            <li>React, Babel, Webpack</li>
+            <li>Jest</li>
+
+        <h3>ElectoCrypt</h3>
+            <div>Decentralized Voting platform augmenting e-voting systems</div>
+            <ul>
+              <li>Truffle Suite, React</li>
+              <li>Firebase</li>
+  
         </section>
       </article>
     </main>
