--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
 
           <h3>XortonSoft</h3>
           <ul>
-            <li>Wordpress Site Developer</li>
+            <li>Wordpress Developer</li>
             <li>Theme Management</li>
           </ul>
         </section>
@@ -113,20 +113,20 @@
             Projects
           </h2>
 
-          <h3>Crypto Beacon</h3>
+          <h3 href="https://github.com/bijoy26/crypto-beacon">Crypto Beacon</h3>
           <div>Decentralized Inclusive Community Media</div>
           <ul>
             <li>Solidity, Truffle, Web3.js</li>
             <li>Polygon</li>
           </ul>
 
-          <h3>Say My Name</h3>
+          <h3 href="https://github.com/bijoy26/say-my-name">Say My Name</h3>
           <div>Random Name Generator</div>
           <ul>
             <li>React, Babel, Webpack</li>
             <li>Jest</li>
 
-        <h3>ElectoCrypt</h3>
+        <h3 href="https://github.com/ricardoprins/decentralhacks">ElectoCrypt</h3>
             <div>Decentralized Voting platform augmenting e-voting systems</div>
             <ul>
               <li>Truffle Suite, React</li>
