--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,20 @@
             Social media
           </h2>
           <ul>
-            <li><a href="https://github.com/bijoy26">@bijoy26</a></li>
+            <li><a href="https://github.com/bijoy26">GitHub - @bijoy26</a></li>
             <li>
-              <a href="https://linkedin.com/in/bijoy26">@bijoy26</a>
+              <a href="https://linkedin.com/in/anjum-rashid">LinkedIn- @anjum-rashid</a>
             </li>
             <li>
-              <a href="https://twitter.com/anjum_bijoy26">@anjum_bijoy26</a>
+              <a href="https://twitter.com/anjum_bijoy26">Twitter - @anjum_bijoy26</a>
             </li>
+            <li>
+                <a href="https://anjumrashidbijoy.medium.com">Medium - @anjumrashidbijoy</a>
+            </li>
+            <li>
+                <a href="https://tryhackme.com/p/bijoy26">TryHackMe - @bijoy26</a>
+            </li>
+  
           </ul>
         </section>
 
@@ -77,13 +84,14 @@
           <ul>
             <li>Gold Milestone Achievement</li>
             <li>Ambasasdors Summit Scavenger Hunt 2021 Winner</li>
+          </ul>
          <h3>Voice of Code</h3>
             <ul>
               <li>Platform Administration</li>
               <li>"Hot Reload 2021" Initiator</li>
           </ul>
         <h3>JU Computer Club</h3>
-          <ul>
+          <ui> 
             <li>Vice President</li>
             <li>Platform Administrator</li>
         </ul>
@@ -125,13 +133,13 @@
           <ul>
             <li>React, Babel, Webpack</li>
             <li>Jest</li>
-
+          </ul>
         <h3 href="https://github.com/ricardoprins/decentralhacks">ElectoCrypt</h3>
             <div>Decentralized Voting platform augmenting e-voting systems</div>
             <ul>
               <li>Truffle Suite, React</li>
               <li>Firebase</li>
-  
+            </ul>>
         </section>
       </article>
     </main>
